--- a/style.css
+++ b/style.css
@@ -2,16 +2,39 @@
     margin: 0;
     padding: 0;
 }
+section {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:  100vh;
+    overflow: hidden;
+    /* background: url(img.jpg); */
+    /* background-attachment: fixed; */
+    /* filter: grayscale(100); */
+}
 #container {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height:  100vh;
     overflow: hidden;
     background: url(img.jpg);
     background-attachment: fixed;
+    filter: grayscale(100);
 }
 .box {
     position: absolute;
     background: url(img.jpg);
     background-attachment: fixed;
+}
+.glitch {
+    position: absolute;
+    background: url(img.jpg);
+    width: 100%;
+    height: 100%;
+    transform: translate(-100px, -100px);
+    mix-blend-mode: overlay;
+    filter: contrast(2);
 }
